--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,5 +12,5 @@ http = "0.2.9"
 rust_search = "2.0.0"
 serde =  { version = "1.0.189", features = ["derive"] }
 tokio = { version = "1.33.0", features = ["full"] }
-tower-http = { version = "0.4.4", features = ["fs"] }
+tower-http = { version = "0.4.4", features = ["cors", "fs"] }
 url = "2.4.1"
